# gig

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  NOTICE  README.md  README.rst  azure-pipelines.yml  gig.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build-release.yml
tests/: test_gig.py
