[project]
name = "gig"
version = "1.2.0"
description = "Generate .gitignore templates from the command line"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Steven Loria", email = "sloria1@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = ["docopt"]

[project.scripts]
gig = "gig:main"

[project.urls]
Issues = "https://github.com/sloria/gig/issues"
Source = "https://github.com/sloria/gig/"

[project.optional-dependencies]
dev = ["gig[tests]", "pre-commit~=3.5", "tox"]
tests = ["pytest", "scripttest==1.3"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["tests/", "tox.ini"]
exclude = ["tests/test-output"]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warning
]
