[project]
name = "gig"
version = "1.2.0"
description = "Generate .gitignore templates from the command line"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Steven Loria", email = "oss@stevenloria.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.8"
dependencies = ["docopt", "requests"]

[project.scripts]
gig = "gig:main"

[project.urls]
Issues = "https://github.com/sloria/gig/issues"
Source = "https://github.com/sloria/gig/"

[project.optional-dependencies]
dev = ["gig[tests]", "pre-commit>=4.3.0,<5.0", "tox"]
tests = ["pytest", "scripttest==2.0.post1"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["tests/", "tox.ini"]
exclude = ["tests/test-output"]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "E731"]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warning
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E721"]
