[metadata]
name = gig
version = 1.1.0
description = Generate .gitignore templates from the command line
keywords = git, github, gitignore, command-line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sloria/gig
author = Steven Loria
author_email = sloria1@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
install_requires =
  docopt
  requests
python_requires = >=3.8
py_modules = gig

[options.extras_require]
tests =
  pytest
  scripttest
dev =
  gig[tests]
  pre-commit~=3.6
  tox


[options.entry_points]
console_scripts =
    gig = gig:main

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
